# server/api/controllers/router.js
@@ -1,8 +1,6 @@
 import * as express from "express";
-
 import userController from "./user.controller";
-
-import companyController from "./company.controller";
+import contactController from "./contatct.controller.js";
 
 import { verifyToken } from "../middlewares/auth.controller";
 
@@ -11,11 +9,9 @@ export default express
   .Router()
   .post("/createUser", userController.createUser)
   .post("/userLogin", userController.userLogin)
-  .post("/createCompany", verifyToken, companyController.createCompany)
-  .get("/getUserCompany", verifyToken, companyController.getUserCompany)
-  .get("/getUser", verifyToken, userController.getUser)
-
-  .put("/updateCompanyData", verifyToken, companyController.updateCompanyData)
-  .put("/updateUserData", verifyToken, userController.updateUserData)
-
-  .post("/deleteCompanyData", verifyToken, companyController.deleteCompanyData);
+  .post("/contacts", verifyToken, contactController.createContact)
+  .get("/contacts", verifyToken, contactController.getContatctList)
+  .get("/contacts/:id", verifyToken, contactController.getContatctByid)
+  .put("/contacts/:id", verifyToken, contactController.updateContatctByid)
+  .delete("/contacts/:id", verifyToken, contactController.deleteContatctByid)
+ 
